--- a/my-microservices/payment-deployment-service.yml
+++ b/my-microservices/payment-deployment-service.yml
@@ -16,7 +16,7 @@ spec:
         spec:
             containers:
               - name: payment-container
-                iamge: payment-service-devops
+                iamge: sukumarrkv/payment-service-devops
                 ports:
                   - containerPort: 8082
 ---
