Corrected the image spelling in payment deployment service manifest file

--- a/my-microservices/payment-deployment-service.yml
+++ b/my-microservices/payment-deployment-service.yml
@@ -16,7 +16,7 @@ spec:
         spec:
             containers:
               - name: payment-container
-                iamge: sukumarrkv/payment-service-devops
+                image: sukumarrkv/payment-service-devops
                 ports:
                   - containerPort: 8082
 ---
