Changes made for implementing configmap and secret

--- a/my-microservices/db-deployment-service.yml
+++ b/my-microservices/db-deployment-service.yml
@@ -19,11 +19,15 @@ spec:
                 image: mysql
                 env:
                   - name: MYSQL_ROOT_PASSWORD
-                    value: test1234
+                    valueFrom:
+                        secretKeyRef:
+                          name: db-secret
+                          key: mysql-password
                   - name: MYSQL_DATABASE
-                    value: devops
-                  - name: MYSQL_ROOT_HOSTS
-                    value: '%'
+                    valueFrom:
+                        configMapKeyRef:
+                          name: db-configmap
+                          key: mysql-database-name
 ---
 apiVersion: v1
 kind: Service
