Changed db deploymet file to get sql script from configmap

--- a/my-microservices/db-deployment-service-with-cm-secret-pvc.yml
+++ b/my-microservices/db-deployment-service-with-cm-secret-pvc.yml
@@ -31,10 +31,15 @@ spec:
                 volumeMounts:
                   - name: mysql-volume
                     mountPath: /var/lib/mysql
+                  - name: mysql-sql-script
+                    mountPath: /docker-entrypoint-initdb.d
             volumes:
               - name: mysql-volume
                 persistentVolumeClaim:
                     claimName: db-pvc
+              - name: mysql-sql-script
+                configMap:
+                    name: db-sql-script-configmap
 ---
 apiVersion: v1
 kind: Service
